[package]
name = "tools"
version = "1.0.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "=0.7.3", features = ["small_rng"] }
rand_pcg = "0.2.1"
rand_chacha = "=0.2.2"
rand_distr = "=0.2.2"
proconio = { version = "=0.3.6", features = ["derive"] }
svg = "0.9.0"
num = "0.2.1"

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false

[[bin]]
name = "main_v1"
path = "src/main_v1.rs"

[[bin]]
name = "main_v2"
path = "src/main_v2.rs"

[[bin]]
name = "main_v3"
path = "src/main_v3.rs"